adding css animate

--- a/index.html
+++ b/index.html
@@ -9,6 +9,25 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
       <link rel="stylesheet" href="css/main_style.css">
+      <!-- icons for different devices -->
+      <link rel="apple-touch-icon" sizes="57x57" href="http://draw-like-masters.elwebman.nl/apple-icon-57x57.png">
+      <link rel="apple-touch-icon" sizes="60x60" href="http://draw-like-masters.elwebman.nl/apple-icon-60x60.png">
+      <link rel="apple-touch-icon" sizes="72x72" href="http://draw-like-masters.elwebman.nl/apple-icon-72x72.png">
+      <link rel="apple-touch-icon" sizes="76x76" href="http://draw-like-masters.elwebman.nl/apple-icon-76x76.png">
+      <link rel="apple-touch-icon" sizes="114x114" href="http://draw-like-masters.elwebman.nl/apple-icon-114x114.png">
+      <link rel="apple-touch-icon" sizes="120x120" href="http://draw-like-masters.elwebman.nl/apple-icon-120x120.png">
+      <link rel="apple-touch-icon" sizes="144x144" href="http://draw-like-masters.elwebman.nl/apple-icon-144x144.png">
+      <link rel="apple-touch-icon" sizes="152x152" href="http://draw-like-masters.elwebman.nl/apple-icon-152x152.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="http://draw-like-masters.elwebman.nl/apple-icon-180x180.png">
+      <link rel="icon" type="image/png" sizes="192x192"  href="http://draw-like-masters.elwebman.nl/android-icon-192x192.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="http://draw-like-masters.elwebman.nl/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="96x96" href="http://draw-like-masters.elwebman.nl/favicon-96x96.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="http://draw-like-masters.elwebman.nl/favicon-16x16.png">
+      <link rel="manifest" href="http://draw-like-masters.elwebman.nl/manifest.json">
+      <meta name="msapplication-TileColor" content="#ffffff">
+      <meta name="msapplication-TileImage" content="http://draw-like-masters.elwebman.nl/ms-icon-144x144.png">
+      <meta name="theme-color" content="#ffffff">
+      <!-- icons for different devices ends -->
       <!-- a helper script for vaidating the form-->
       <script src="js/email_validator.js"></script>
       <script>
@@ -70,7 +89,7 @@
           </div>
           <div class="row">
             <div class="col-4">
-              <p><a href="drawing.html" target="_parent"><button class="tools">Access the APP !</button></a></p>
+              <p><a href="drawing.html" target="_parent"><button class="tools animated tada">Access the APP !</button></a></p>
             </div>
           </div>
         </div>
@@ -167,7 +186,7 @@
             <p>Visitors can search the rich Collection.</p>
             <p>Results will include the Image URL, Title, description</p>
             <p>&nbsp;</p>
-            <p><a href="drawing.html" target="_parent"><button class="tools">Access the APP !</button></a></p> 
+            <p><a href="drawing.html" target="_parent"><button class="tools animated tada">Access the APP !</button></a></p> 
           </div>
         </div>
       </div>
