--- a/drawing.html
+++ b/drawing.html
@@ -1,175 +1,182 @@
-<!DOCTYPE html>
-<html>
+  <!DOCTYPE html>
+  <html>
 
-<head>
+  <head>
 
-  <meta charset="UTF-8">
-  <title>Draw like Masters App - by elwebman.nl</title>
-  <meta name="description" content="Draw like Masters APP">
-  <meta name="author" content="Alex Olivet - elwebman.nl">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- icons for different devices -->
-  <link rel="apple-touch-icon" sizes="57x57" href="http://draw-like-masters.elwebman.nl/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="http://draw-like-masters.elwebman.nl/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="http://draw-like-masters.elwebman.nl/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="http://draw-like-masters.elwebman.nl/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="http://draw-like-masters.elwebman.nl/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="http://draw-like-masters.elwebman.nl/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="http://draw-like-masters.elwebman.nl/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="http://draw-like-masters.elwebman.nl/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="http://draw-like-masters.elwebman.nl/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="http://draw-like-masters.elwebman.nl/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="http://draw-like-masters.elwebman.nl/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="http://draw-like-masters.elwebman.nl/favicon-96x96.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="http://draw-like-masters.elwebman.nl/favicon-16x16.png">
-  <link rel="manifest" href="http://draw-like-masters.elwebman.nl/manifest.json">
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="http://draw-like-masters.elwebman.nl/ms-icon-144x144.png">
-  <meta name="theme-color" content="#ffffff">
-  <!-- icons for different devices ends -->
-  <link rel="stylesheet" href="css/main_style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <!-- a helper script for vaidating the form-->
-  <script src="js/email_validator.js"></script>
-  <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    <meta charset="UTF-8">
+    <title>Draw like Masters App - by elwebman.nl</title>
+    <meta name="description" content="Draw like Masters APP">
+    <meta name="author" content="Alex Olivet - elwebman.nl">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- icons for different devices -->
+    <link rel="apple-touch-icon" sizes="57x57" href="http://draw-like-masters.elwebman.nl/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="http://draw-like-masters.elwebman.nl/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="http://draw-like-masters.elwebman.nl/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="http://draw-like-masters.elwebman.nl/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="http://draw-like-masters.elwebman.nl/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="http://draw-like-masters.elwebman.nl/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="http://draw-like-masters.elwebman.nl/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="http://draw-like-masters.elwebman.nl/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="http://draw-like-masters.elwebman.nl/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="http://draw-like-masters.elwebman.nl/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="http://draw-like-masters.elwebman.nl/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="http://draw-like-masters.elwebman.nl/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="http://draw-like-masters.elwebman.nl/favicon-16x16.png">
+    <link rel="manifest" href="http://draw-like-masters.elwebman.nl/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="http://draw-like-masters.elwebman.nl/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+    <!-- icons for different devices ends -->
+    <link rel="stylesheet" href="css/main_style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <!-- a helper script for vaidating the form-->
+    <script src="js/email_validator.js"></script>
+    <script>
+    (function(i, s, o, g, r, a, m) {
+      i['GoogleAnalyticsObject'] = r;
+      i[r] = i[r] || function() {
+        (i[r].q = i[r].q || []).push(arguments)
+      }, i[r].l = 1 * new Date();
+      a = s.createElement(o),
+      m = s.getElementsByTagName(o)[0];
+      a.async = 1;
+      a.src = g;
+      m.parentNode.insertBefore(a, m)
+    })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-  ga('create', 'UA-21068000-3', 'auto');
-  ga('send', 'pageview');
+    ga('create', 'UA-21068000-3', 'auto');
+    ga('send', 'pageview');
+    </script>
 
-  </script>
+  </head>
 
-</head>
+  <body id="page-five">
+    <ul id="home-top">
+      <li><a href="index.html"><i class="fa fa-home fa-3x" aria-hidden="true"></i></a>
+      </li>
+    </ul>
 
-<body id="page-five">
-  <ul id="home-top">
-    <li><a href="index.html"><i class="fa fa-home fa-3x" aria-hidden="true"></i></a>
-    </li>
-  </ul>
-
-  <div class="clearfix wrap">
-    <!--Column#1-->
-    <div class="col col5">
-      <div class="box box7">
-       <div class="loader" id="loader"></div>  
-       <div id="result"></div>
-       <!--  will display text if nothing is found -->
-       <div id="result4"></div>
-       <p id="drawing1"></p>
-       <canvas id="myCanvas" width="450" height="325">Your browser does not support the HTML5 "canvas" tag.</canvas>
-     </div>
-     <!--Column#2-->
-     <div class="col col4">
-      <div class="box box3">
-        <!-- search field -->
-        <div class="division">
-          <input id="query" type="search" placeholder="Artist, Painting, or anything!">
+    <div class="clearfix wrap">
+      <!--Column#1-->
+      <div class="col col5">
+        <div class="box box7">
+          <div class="loader" id="loader"></div>
+          <div id="result"></div>
+          <!--  will display text if nothing is found -->
+          <div id="result4"></div>
+          <p id="drawing1"></p>
+          <canvas id="myCanvas" width="450" height="325">Your browser does not support the HTML5 "canvas" tag.</canvas>
         </div>
-        <div class="division">
-          <!-- search button -->
-          <button id="search" class="tools">Search</button>
-          <!-- reset button -->
-          <button id='reset-canvas' class="tools">Reset Canvas</button>
+        <!--Column#2-->
+        <div class="col col4">
+          <div class="box box3">
+            <!-- search field -->
+            <div class="division">
+              <input id="query" type="search" placeholder="Artist, Painting, or anything!">
+            </div>
+            <div class="division">
+              <!-- search button -->
+              <button id="search" class="tools">Search</button>
+              <!-- reset button -->
+              <button id='reset-canvas' class="tools">Reset Canvas</button>
+            </div>
+          </div>
+          <div class="box box2">
+            <div class="division">
+              Artist:
+              <div id="result1"></div>
+            </div>
+            <div class="division">
+              URL:
+              <div id="result3"></div>
+            </div>
+          </div>
+        </div>
+        <!--Column#3-->
+        <div class="col col6">
+          <div class="box box2">Title:
+            <div id="result5"></div>
+          </div>
+          <div class="box box2">Description:
+            <div id="result2"></div>
+          </div>
+          <div class="box box1">
+            <p>The "draw-like-masters" APP has been developed using <a href="http://rijksmuseum.github.io">the Rijksmuseum API.</a>
+            </p>
+          </div>
         </div>
       </div>
-      <div class="box box2">
-        <div class="division">
-          Artist:
-          <div id="result1"></div>
-        </div>
-        <div class="division">
-          URL:
-          <div id="result3"></div>
-        </div>
-      </div>
-    </div>
-    <!--Column#3-->
-    <div class="col col6">
-      <div class="box box2">Title:
-        <div id="result5"></div>
-      </div>
-      <div class="box box2">Description:
-        <div id="result2"></div>
-      </div>
-      <div class="box box1">
-        <p>The "draw-like-masters" APP has been developed using <a href="http://rijksmuseum.github.io">the Rijksmuseum API.</a>
-        </p>
-      </div>
-    </div>
-  </div>
-  <!--Column#4-->
-  <!--not on mobile starts-->
-  <div class="mobile">
-    <div class="col col2">
-      <div class="box box6">
-        <ol id="list1">
-          <li>We email you the original image URL to your email.
-            <li>&nbsp;</li>
-            <ul>Simply follow the form instructions:
-              <li>&nbsp;</li>
-              <li>*Click on 'Save Image.</li>
-              <li>*Fill in your name.</li>
-              <li>*Fill in a valid email address</li>
-              <li>*Click on Send</li>
-            </li>
-          </ol>
-        </div>
-        <div class="box box3"> <button id="save-image" class="tools  animated shake">Save Image</button></div>
-      </div>
-      <!--Column#5-->
-      <div class="col col3">
-        <div class="box">
-          <p>The draw-like-masters APP was not developed by, for, through the intercession of, or with the support of the Rijksmuseum.</a>
-          </p>
-        </div>
-        <form method="POST" name="contactform-image" action="js/contact-form-image.php" id="form_image">
+      <!--Column#4-->
+      <!--not on mobile starts-->
+      <div class="mobile">
+        <div class="col col2">
           <div class="box box6">
-            <img id="canvas-image">
-          </div>
-          <!--Column#6-->
-          <div class="col col6">
-            <div class="box box2">Your Name:
-              <br>
-              <label id='name'></label>
-              <br>
-              <input type="text" name="name">
+            <ol id="list1">
+              <li>We email you the original image URL to your email.
+                <li>&nbsp;</li>
+                <li>Simply follow the form instructions:
+                  <li>&nbsp;</li>
+                  <li>*Click on 'Save Image.</li>
+                  <li>*Fill in your name.</li>
+                  <li>*Fill in a valid email address</li>
+                  <li>*Click on Send</li>
+                </ol>
+              </div>
+              <div class="box box3">
+                <button id="save-image" class="tools  animated shake">Save Image</button>
+              </div>
             </div>
-            <div class="box box2">Your Email Address:
-              <br>
-              <label id='email'></label>
-              <br>
-              <input type="text" name="email">
-              <textarea name="message" id="result6" class="hidden"></textarea>
-              <textarea name="message1" id="result7" class="hidden"></textarea>
-              <textarea name="message2" id="result8" class="hidden"></textarea>
-              <textarea name="message3" id="result9" class="hidden"></textarea>
+            <!--Column#5-->
+            <div class="col col3">
+              <div class="box">
+                <p>The draw-like-masters APP was not developed by, for, through the intercession of, or with the support of the Rijksmuseum.
+                </p>
+              </div>
+              <form method="POST" name="contactform-image" action="js/contact-form-image.php" id="form_image">
+                <div class="box box6">
+                  <img id="canvas-image">
+                </div>
+                <!--Column#6-->
+                <div class="col col6">
+                  <div class="box box2">Your Name:
+                    <br>
+                    <label id='name'></label>
+                    <br>
+                    <input type="text" name="name">
+                  </div>
+                  <div class="box box2">Your Email Address:
+                    <br>
+                    <label id='email'></label>
+                    <br>
+                    <input type="text" name="email">
+                    <textarea name="message" id="result6" class="hidden"></textarea>
+                    <textarea name="message1" id="result7" class="hidden"></textarea>
+                    <textarea name="message2" id="result8" class="hidden"></textarea>
+                    <textarea name="message3" id="result9" class="hidden"></textarea>
+                  </div>
+                </div>
+                <!--Column#7-->
+                <div class="col col4">
+                  <div class="box box4">
+                    <input type="submit" value="Send" class="tools">
+                  </div>
+                </div>
+              </form>
             </div>
           </div>
-          <!--Column#7-->
-          <div class="col col4">
-            <div class="box box4">
-              <input type="submit" value="Send" class="tools">
-            </div>
-          </div>
-        </form>
-      </div>
-    </div>
-    <!--not on mobile ends-->
-  </div>
-  <!-- start email validator -->
-  <script>
-  var frmvalidator = new Validator("contactform-image");
-  frmvalidator.addValidation("name", "req", "Please provide your name");
-  frmvalidator.addValidation("email", "req", "Please provide your email");
-  frmvalidator.addValidation("email", "email", "Please enter a valid email address");
-  </script>
-  <!-- end email validator -->
-  <script type="text/javascript" src="js/script.js"></script>
-  <script src="js/jquery.js"></script>
-</body>
+          <!--not on mobile ends-->
+        </div>
+        <!-- start email validator -->
+        <script>
+        var frmvalidator = new Validator("contactform-image");
+        frmvalidator.addValidation("name", "req", "Please provide your name");
+        frmvalidator.addValidation("email", "req", "Please provide your email");
+        frmvalidator.addValidation("email", "email", "Please enter a valid email address");
+        </script>
+        <!-- end email validator -->
+        <script type="text/javascript" src="js/script.js"></script>
+        <script src="js/jquery.js"></script>
+      </body>
 
-</html>
+      </html>
