fixing test typos

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <!-- icons for different devices ends -->
     <!-- a helper script for vaidating the form-->
     <script src="js/email_validator.js"></script>
+    <!-- google anaylytics starts -->
     <script>
         (function(i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r;
@@ -46,6 +47,7 @@
         ga('create', 'UA-21068000-3', 'auto');
         ga('send', 'pageview');
     </script>
+    <!-- google anaylytics ends -->
 </head>
 
 <body>
@@ -132,7 +134,7 @@
 
                     <p> Bring together your favourite works, share them with friends or download the images free of charge to create your own new artworks. All images presented in Rijksstudio have been released for private and commercial use. All you need is your imagination!</p>
 
-                    <p>The "draw-like-masters" APP was developed using the Rijksmuseum API. Each Search result will return not the only the picture but also the title, a small description and the artist that made the painting.</p>
+                    <p>The "draw-like-masters" APP was developed using the Rijksmuseum API. Each Search result will return the picture and also the title, a small description and the artist that made the painting.</p>
                     <p>A direct link to the Rijksstudio will be presented to the user on each work of art.</p>
 
                     <p>The Rijksmuseum Collection can now be enjoyed by people across the world. Even if you can't travel to Amsterdam, the Rijksmuseum Collection is available to you.</p>
@@ -149,8 +151,7 @@
                     <p>&nbsp;</p>
                     <p>The "draw-like-masters" APP is an an incredibly simple API that can be used by young and old alike.</p>
 
-                    <p>This API has been build using JSON. </p>
-                    <p>JSON (JavaScript Object Notation) is a minimal, readable format for structuring data. It is a lightweight data-interchange format. It is used primarily to transmit data between a server and web application</p>
+                    <p>This API has been build using JSON. JSON (JavaScript Object Notation) is a minimal, readable format for structuring data. It is a lightweight data-interchange format. It is used primarily to transmit data between a server and web application</p>
 
                     <p>I am elwebman.nl and I love to create things that are useful. I have developed this app by joining a museum's collection with today's technology.</p>
                     <p>I am inspired by this and would like to invite users to create their own masterpieces.</p>
@@ -182,7 +183,7 @@
                 <div class="col-6 left">
                     <p>&nbsp;</p>
                     <p>The desktop and tablet version has 3 main features.</p>
-                    <p>The search button allows visitors to search the Rijksmuseum Online Collection.</p>
+                    <p>The search button allows visitors to search the Rijksmuseum Online Collection. Search for anything, a paint, an artist, something!</p>
                     <p>The canvas allows for user interaction. Drawing on an image, learning to draw.</p>
                     <p>We can save your image choice and send you all the needed details (Image URL, Title, description and more ) directly to your email.</p>
                     <p>
