--- a/drawing.html
+++ b/drawing.html
@@ -32,6 +32,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <!-- a helper script for vaidating the form-->
     <script src="js/email_validator.js"></script>
+    <!-- google anaylytics starts -->
     <script>
     (function(i, s, o, g, r, a, m) {
       i['GoogleAnalyticsObject'] = r;
@@ -48,6 +49,7 @@
     ga('create', 'UA-21068000-3', 'auto');
     ga('send', 'pageview');
     </script>
+    <!-- google anaylytics ends -->
 
   </head>
 
