--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
             <a href="#page-four">About |</a>
             <a href="#page-five">Optimised |</a>
             <a href="#page-six">Contact |</a>
-            <a href="drawing.html">go to directly to the APP!</a>
+            <a href="drawing.html" class="animated infinite flash">Access the APP!</a>
         </div>
         <span id="menu" onclick="openNav()">&#9776; Open</span>
         <div id="mySidenav" class="sidenav">
             <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+            <a href="drawing.html" onclick="closeNav()">Access the APP!</a>
             <a href="#page-one" onclick="closeNav()">Home</a>
             <a href="#page-two" onclick="closeNav()">Art & Education</a>
             <a href="#page-three" onclick="closeNav()">The Collection</a>
             <a href="#page-four" onclick="closeNav()">About</a>
             <a href="#page-five" onclick="closeNav()">Optimised</a>
             <a href="#page-six" onclick="closeNav()">Contact</a>
-            <a href="drawing.html" onclick="closeNav()">Draw-like-masters APP</a>
         </div>
     </nav>
     <!-- Nav ends here -->
@@ -161,16 +161,16 @@
                 <div class="col-4 right">
                     <p>&nbsp;</p>
                     <p>Method of use:</p>
-                    <p>- search for anything.</p>
+                    <p>- Search for anything.</p>
 
-                    <p>- click the search button.</p>
+                    <p>- Click the search button.</p>
 
-                    <p>- image will display on canvas.</p>
-                    <p>- title,artist and description will display along.</p>
+                    <p>- Image will display on canvas.</p>
+                    <p>- Title,artist and description will display along.</p>
 
-                    <p>- use your cursor to draw on the picture.</p>
-                    <p>- if you want a new picture, click on 'Reset Canvas'.</p>
-                    <p>- if you want to save the image, click on 'Save Image'.</p>
+                    <p>- Use your cursor to draw on the picture.</p>
+                    <p>- If you want a new picture, click on 'Reset Canvas'.</p>
+                    <p>- If you want to save the image, click on 'Save Image'.</p>
                 </div>
             </div>
         </div>
