--- a/drawing.html
+++ b/drawing.html
@@ -117,7 +117,7 @@
           </div>
         </div>
       </div>
-      <!--Column#4-->>
+      <!--Column#4-->
         <div class="col col2">
           <div class="box box6">
             <ol id="list1">
